Fix T44688: Stereo3D time-sequential crashes